--- a/css/styles.css
+++ b/css/styles.css
@@ -28,6 +28,7 @@
   
   button:hover {
     background-color: #102f5e;
+    color: #fff;
   }
   
   button:hover > i {
@@ -39,5 +40,114 @@
     color: #102f5e;
     font-weight: bold;
   }
+  
+input, select {
+  padding: 0.25rem 0.5rem;
+}
+  
+
+.hide{
+  display: none;
+}
+/* Todo header */
+.todo-container{
+  max-width: 450px;
+  margin: 3rem auto;
+  background-color: #fdfdfd;
+  padding: 1.5rem;
+  border-radius: 15px;
+}
+
+.todo-container header {
+  text-align:center;
+  padding: 0 1rem 1rem;
+  border-bottom: 1px solid #ccc; 
+}
 
 
+
+#todo-form p,
+#edit-form p {
+  margin-bottom: 0.5rem;
+  font-weight: bold;
+}
+
+.form-control {
+  display: flex;
+}
+
+.form-control input{
+margin-right: 0.3rem;
+}
+
+#cancel-edit-btn {
+  margin-top: 1rem;
+  color: #444;
+}
+
+/* todo toolbar */
+  #toolbar{
+    padding: 1rem;
+    border-bottom: 1px solid #CCC;
+    display: flex;
+  }
+
+  #toolbar h4{
+    margin-bottom: 0.5rem;
+  }
+
+  #search{
+    border-right: 1px solid #ddd;
+    padding-right: 1rem;
+    margin-right: 1rem;
+    width: 65%;
+    display: flex;
+    flex-direction: column;
+  }
+
+  #search form {
+display: flex;
+  }
+#search input {
+  width:100%;
+  margin-right: 0.3rem;
+}
+
+#filter{
+  width:35%;
+  display: flex;
+  flex-direction: column;
+}
+#filter select{
+  flex: 1;
+}
+
+/*todo list*/
+.todo{
+  display:flex;
+  justify-content: space-around;
+  align-items: center;
+  padding:1rem;
+  border-bottom: 1px solid #ddd;
+  transition:0.3s;
+}
+
+.todo h3{
+  flex: 1;
+  font-size: 0.9rem;
+}
+
+.todo button{
+  margin-left: 0.4rem;
+
+}
+
+.done {
+  background-color: #395169;
+}
+
+.done h3{
+  color: #fff;
+  text-decoration: line-through;
+  font-style: italic;
+}
